--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
 before_script:
   - sudo service mysql stop
   - redis-cli config set save ""
-  - 'RAILS_ENV=test rake db:create db:schema:load --trace'
+  - 'RAILS_ENV=test rake db:create db:structure:load --trace'
 script:
   - './build.sh'
 notifications:
